sqlo_macros/tests/try/err/unknown_key.stderr
error: unknown key in #[sqlo]
 --> tests/try/err/unknown_key.rs:5:8
  |
5 | #[sqlo(foo = "bar")]
  |        ^^^^^^^^^^^
